[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
log = "0.4.20"
chrono = "0.4.34"
colored = "2.1.0"
fern = "0.6.2"
